samples/_failures_safe/1761284431_c4e0b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17c0b524.c: In function ‘main’:
./samples/SAFE/__tmp_17c0b524.c:151:5: error: expected expression at end of input
  151 |     print_matrix(&
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_17c0b524.c:151:5: error: expected declaration or statement at end of input
